--- a/index.html
+++ b/index.html
@@ -444,14 +444,14 @@
 			</div>
 			<div class="mywindow" id="myform" style="width: 500px; height: 240px">
 				<div class="myheader">
-					Registrasi
+					tolong dulu masukin namanya neni haha
 				</div>
 				<div class="mybody">
 					<div class="mytitle">
-						Isi identitas anda terlebih dahulu
+						ini beda lagi ni
 					</div>
 					<div class="mycontent">
-						Tekan tombol merah untuk reset nama.<br><br>
+						tombol merah buat reset nama<br><br>
 						Nama :
 						<input class="mytext" type="text" id="mynama" name="nama">
 					</div>
