--- a/index.html
+++ b/index.html
@@ -471,10 +471,11 @@
 				</div>
 				<div class="mybody">
 					<div class="mytitle">
-						Aku sudah lama menyukaimu.
+						abg ndk tau mau ngomong gimana
 					</div>
 					<div class="mycontent">
-						Maukah kau menjadi orang yang selalu ada disisiku, yang selalu ada disaat senang ataupun susah ? pilih jawaban dibawah yaaa
+						semoga sih neni selalu bahagia terus, abang hanye bise doakan yang terbaik
+						neni bahagiee ndak hari ini ?
 					</div>
 					<div class="mybutton">
 						<div class="mybuttonno" onmouseover="move()" onclick="move2()" >tidak</div>
