--- a/index.html
+++ b/index.html
@@ -736,14 +736,14 @@
 				$(".ucapan").append('<span id="spannama2"></span>');
 				var today = new Date();
 				var h = today.getHours();
-				if(h>23)tulis('malam','seharusnya kamu sudah tidur');
-				else if(h>19)tulis('malam','waktunya mengisi energi');
-				else if(h>18)tulis('petang','selamat menikmati senja');
-				else if(h>14)tulis('sore','selamat menjalani hari');
-				else if(h>13)tulis('siang','tetap semangat')
-				else if(h>9)tulis('siang','selamat bekerja')
-				else if(h>4)tulis('pagi','selamat beraktivitas');
-				else tulis('malam','seharusnya kamu sudah tidur');
+				if(h>23)tulis('malam','seharusnya jam segini udah tidur neni ni wkwk');
+				else if(h>19)tulis('malam','waktunya tidur neni tu');
+				else if(h>18)tulis('petang','cocok e nyantai sih ni sore2');
+				else if(h>14)tulis('sore','preparelah cari spot bagus buat tengok sunset wkwk');
+				else if(h>13)tulis('siang','kemane a sore ini neni cantik')
+				else if(h>9)tulis('siang','harusnye sih baru bangun nih, semangat ganti jam tidurnyaa mba neni cantik ')
+				else if(h>4)tulis('pagi','mba neni cantik');
+				else tulis('malam','yok betolkan jam tidur cantik wkwk');
 				selesai=true;
 			}
 			function resetposisi(){
