--- a/index.html
+++ b/index.html
@@ -471,10 +471,9 @@
 				</div>
 				<div class="mybody">
 					<div class="mytitle">
-						abg ndk tau mau ngomong gimana
+						bahagia terus mbaa neni cantik
 					</div>
 					<div class="mycontent">
-						semoga sih neni selalu bahagia terus, abang hanye bise doakan yang terbaik
 						neni bahagiee ndak hari ini ?
 					</div>
 					<div class="mybutton">
