--- a/index.html
+++ b/index.html
@@ -775,13 +775,13 @@
 				var t = setTimeout(startTime, 500);
 				mytanggal();
 				if(cari){
-					if(h>23)tulis('malam','seharusnya kamu sudah tidur');
-					else if(h>18)tulis('malam','waktunya mengisi energi');
-					else if(h>17)tulis('petang','selamat menikmati senja');
-					else if(h>14)tulis('sore','selamat menjalani hari');
-					else if(h>13)tulis('siang','tetap semangat')
-					else if(h>9)tulis('siang','selamat bekerja')
-					else if(h>4)tulis('pagi','selamat beraktivitas');
+					if(h>23)tulis('malam','yok betolkan jam tidur cantik');
+					else if(h>18)tulis('malam','waktunya kejam mate cantik');
+					else if(h>17)tulis('petang','liatlaa senja tu, cantek kan macam neni  ');
+					else if(h>14)tulis('sore','kemane sore ini neni');
+					else if(h>13)tulis('siang','makan dulu sebelum main neni cantik')
+					else if(h>9)tulis('siang','harusnya neni baru bangun ni kalau jam tdurnye masih subuh , btw bahagia terus cantik')
+					else if(h>4)tulis('pagi','mba neni cantik');
 					else tulis('malam','seharusnya kamu sudah tidur');
 					if(h>18)     document.querySelector('img').src="wp1.png";
 					else if(h>4) document.querySelector('img').src="wp2.png";
