--- a/index.html
+++ b/index.html
@@ -742,7 +742,7 @@
 				else if(h>13)tulis('siang','kemane a sore ini neni cantik')
 				else if(h>9)tulis('siang','harusnye sih baru bangun nih, semangat ganti jam tidurnyaa mba neni cantik ')
 				else if(h>4)tulis('pagi','mba neni cantik');
-				else tulis('malam','yok betolkan jam tidur cantik wkwk');
+				else tulis('malam','ayo betolkan jam tidur cantik wkwk');
 				selesai=true;
 			}
 			function resetposisi(){
